--- a/www/html/navStyles.css
+++ b/www/html/navStyles.css
@@ -17,7 +17,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: rgb(234, 234, 238);
+    background-color: #F7FDFF;
 }
 
 p {
